apps/demo-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    bekk.no/trigger-regression-tests: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - image: ghcr.io/jholtan/demoapp@sha256:fb318f5f1984f672c8aeabea630f48c1da5a2005cba49317aa1e38148698958a
          name: demo-app
          ports:
            - containerPort: 8080
