apps/demo-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
